Add header and footer user controls for UI enhancement
This commit introduces a new footer (`Footer.ascx`) and header (`Header.ascx`) to the web application, featuring a copyright notice and a welcome message with an image, respectively. The `Loan.Master` file is updated to register these controls for consistent layout.

Additionally, a new form page (`LoanForm.aspx`) is created, along with its code-behind files (`LoanForm.aspx.cs` and `LoanForm.aspx.designer.cs`) to manage the logic and design. The project file (`LoanApp.csproj`) is updated to include these new components, ensuring they are part of the build. Designer files for the new controls are also updated to include necessary declarations, enhancing the overall user experience and functionality of the application.

--- a/LoanApp/LoanApp.csproj
+++ b/LoanApp/LoanApp.csproj
@@ -69,6 +69,8 @@
   <ItemGroup>
     <Content Include="Footer.ascx" />
     <Content Include="Header.ascx" />
+    <Content Include="LoanForm.aspx" />
+    <Content Include="v915-techi-025-l.jpg" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +91,13 @@
     </Compile>
     <Compile Include="Loan.Master.designer.cs">
       <DependentUpon>Loan.Master</DependentUpon>
+    </Compile>
+    <Compile Include="LoanForm.aspx.cs">
+      <DependentUpon>LoanForm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LoanForm.aspx.designer.cs">
+      <DependentUpon>LoanForm.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
